[gd_scene load_steps=7 format=3 uid="uid://q5ddnm20kbtu"]

[ext_resource type="Script" path="res://scripts/strata_scene.gd" id="1_c3uoi"]
[ext_resource type="PackedScene" uid="uid://c57wqqly7v4m2" path="res://components/ui/ui_overlay.tscn" id="2_f638g"]
[ext_resource type="PackedScene" uid="uid://bgta6ocyf3gel" path="res://entities/enemy_prop/enemy_spawner.tscn" id="2_r6xkg"]
[ext_resource type="PackedScene" uid="uid://dnf50r83tkwx3" path="res://components/ui/game_over.tscn" id="3_73x4l"]
[ext_resource type="PackedScene" uid="uid://biim58k38oa7h" path="res://entities/player_prop/player.tscn" id="3_mj6i4"]
[ext_resource type="PackedScene" uid="uid://b7d5rmrbmprps" path="res://assets/textures/parallax/parallax_test_background.tscn" id="6_vofd3"]

[node name="StrataScene" type="Node2D"]
script = ExtResource("1_c3uoi")
metadata/_edit_horizontal_guides_ = [540.0]
metadata/_edit_vertical_guides_ = [960.0]

[node name="UIOverlay" parent="." instance=ExtResource("2_f638g")]

[node name="GameOver" parent="." instance=ExtResource("3_73x4l")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="EnemySpawner" parent="." instance=ExtResource("2_r6xkg")]

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(-137, 82)
limit_left = 0
limit_top = 0
limit_right = 960
limit_bottom = 540
limit_smoothed = true

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(185, 237)

[node name="Player" parent="." instance=ExtResource("3_mj6i4")]
position = Vector2(-137, 82)

[node name="CameraConnection" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../MainCamera")

[node name="ParallaxTestBackground" parent="." instance=ExtResource("6_vofd3")]

[node name="LaserContainer" type="Node2D" parent="."]

[connection signal="health_change" from="Player" to="." method="_on_player_health_change"]
[connection signal="player_killed" from="Player" to="." method="_on_player_killed"]
